module/core/former/tests/inc/enum_tests/enum_unit_tests/compile_fail/unit_subform_scalar_error.rs
use former::Former; // Add import

#[derive(Former)] // Use #[derive(Former)]
enum MyEnum {
    #[subform_scalar] // Use #[subform_scalar] directly
    MyUnitVariant, // This should cause a compile error
}

fn main() {} // Added empty main function